[package]
name = "yewchat"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
yew = "0.19"
yew-router = "0.16"
yew-agent = "0.1"
wasm-bindgen = "0.2.92"
wasm-logger = "0.2"
log = "0.4"
web-sys = { version = "0.3", features = ["HtmlInputElement"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwasm = "0.5"
futures = "0.3"
wasm-bindgen-futures = "0.4"